# rnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
rnn/: fully_connected_layer.py
rnn/data/: statistic_data.py  statistic_initialize_data.py  trained_data.py
rnn/functions/: loss_function.py  mean_squared_error_loss_function.py  sigmoid_activation_function.py
rnn/layers/: activation_function_layer.py  layer.py
src/: __init__.py  layer.py
src/rnn/: layer.py  network.py  test_layer.py
src/rnn/data/: initialize_data.py  memory_initialize_data.py  statistic_data.py  statistic_initialize_data.py  trained_data.py  training_data.py
src/rnn/file/: json_file.py
src/rnn/functions/: activation_function.py  hyperbolic_tangent_activation_function.py  loss_function.py  mean_squared_error_loss_function.py  relu_activation_function.py  sigmoid_activation_function.py
src/rnn/layers/: activation_function_layer.py  fully_connected_layer.py  layer.py
tests/: test_layer.py
tests/rnn/: test_network.py
tests/rnn/data/: test_initialize_data.py  test_statistic_data.py  test_statistic_initialize_data.py  test_trained_data.py  test_training_data.py
tests/rnn/functions/: test_activation_function.py  test_hyperbolic_tangent_activation_function.py  test_loss_function.py  test_mean_squared_error_loss_function.py  test_relu_activation_function.py  test_sigmoid_activation_function.py
tests/rnn/layers/: test_activation_function_layer.py  test_fully_connected_layer.py  test_layer.py
tests/training/: test_network_circle_shape_trained.json  test_network_circle_shape_trained.py  test_network_circle_shape_training.py  test_network_keras_image_trained.json  test_network_keras_image_trained.py  test_network_keras_image_training.py  test_network_xor_trained.json  test_network_xor_trained.py  test_network_xor_training.py  test_training_circle_shape_training.py
