[tool.poetry]
name = "rnn"
version = "1.0.0"
description = "rnn"
authors = ["Yadickson Soto <yadickson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
sinfo = "^0.3.1"
pytest = "^8.1.1"
matplotlib = "^3.8.3"
flake8 = "^7.0.0"
mypy = "^1.9.0"
black = "^24.3.0"
pytest-cov = "^5.0.0"
coverage = "^7.4.4"
MutPy = "^0.6.1"
Faker = "^24.4.0"
isort = '^5.13.2'
keras = '^3.1.1'
ml-dtypes = '0.3.2'
tensorboard = '2.16.2'
tensorflow = '2.16.1'
poetry-exec-plugin = '^0.3.6'

[tool.poetry-exec-plugin.commands]
format = "black src/ tests/ --line-length=120 --preview && isort src/ tests/"
lint = "flake8 src/ tests/ --max-line-length=120 --ignore=E203 && mypy src/ tests/"
test = "python -m pytest -o log_cli=true --no-header --junitxml=test-results.xml"
"test:log" = "python -m pytest -s --log-cli-level=INFO"
"test:coverage" = "python -m pytest --cov-report html:reports/coverage --cov-report lcov:coverage/lcov.info --cov-report xml:coverage/coverage.xml  --cov=src"
"test:mutation" = "mut.py --target src/ --unit-test tests/ --runner 'pytest' --report-html reports/mutation --show-mutants --colored-output"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.mypy]
disable_error_code = "import-untyped"
