[tool.poetry]
name = "rnn"
version = "1.0.0"
description = "rnn"
authors = ["Yadickson Soto <yadickson@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
Faker = "^24.4.0"
coverage = "^7.4.4"
MutPy = "^0.6.1"
mutmut = '^2.5.1'
matplotlib = "^3.8.3"
keras = '^3.1.1'
ml-dtypes = '0.3.2'
tensorboard = '2.16.2'
tensorflow = '2.16.1'

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = '^5.13.2'
poetry-exec-plugin = '^0.3.6'

[tool.poetry-exec-plugin.commands]
format = "black src/ tests/ --line-length=150 --preview && isort src/ tests/"
lint = "flake8 src/ tests/ --max-line-length=150 --ignore=E203 && mypy src/ tests/"
test = "python -m pytest -o log_cli=true --no-header --junitxml=test-results.xml"
"test:coverage" = "python -m pytest --cov-report html:reports/coverage --cov-report lcov:coverage/lcov.info --cov-report xml:coverage/coverage.xml --cov=src"
"test:mutpy" = "mut.py --target src/ --unit-test tests/ --runner 'pytest' --report-html reports/mutation --show-mutants --colored-output"
"test:mutmut" = "mutmut run && mutmut html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.mypy]
disable_error_code = "import-untyped"
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.mutmut]
paths_to_mutate="src"
tests_dir="tests"
runner="python -m pytest"

[tool.isort]
combine_as_imports = "true"
force_grid_wrap = 0
include_trailing_comma = "true"
known_first_party = "src"
line_length = 150
multi_line_output = 3

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod"
    ]
